Issue #2464675 by arknoll: Fix coding standard issues.

--- a/modules/environment_readonly/environment_readonly.css
+++ b/modules/environment_readonly/environment_readonly.css
@@ -1,6 +1,6 @@
-
 /**
- * @file Basic styles for the environment module
+ * @file
+ * Basic styles for the environment module
  */
 
 #block-environment-readonly-environment-readonly-alert {
